﻿A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Note that, baring some major issue building and cutting the release, build
228 will be the last version supporting Python 2.


Since build 228:
----------------

* Changed how Services implemented with win32serviceutil.ServiceFramework
  report that they have stopped. Now if the SvcRun() method (or the SvcDoRun()
  method, which is called by SvcRun() by default) raises on Exception,
  the Service will report a final SERVICE_STOPPED status with a non-zero error
  code. This will cause the Service's recovery actions to be triggered if the
  Service has the "Enable actions for stops with errors" option enabled.
  (#1563, Lincoln Puzey)

* adodbapi connect() method now accepts a "mode" keyword argument which is the
  "Mode" property to set on the ADO "Connection" object before opening the
  Connection. See "ConnectModeEnum" for valid values.
  (Lincoln Puzey)

* The Windows 10 SDK is now used to build the project. This shouldn't cause any
  visible changes, but should make it much easier to build the project yourself.

Python 2 is no longer supported - so long, Python 2, you served us well!

Notable changes in this transition:

* Python 3 builds used to erroneously turn "bytes" into a tuple of integers
  instead of a buffer type object. Because this special-casing is important for
  performance when using massive buffers, this has been fixed in Python 3 so
  it matches the old Python 2 behavior. If you use arrays of VT_UI1 and expect
  get back tuples of integers, your code may break.

* Pythonwin's default encoding is now utf-8 (#1559)

Since build 227:
----------------
* Support for for win32evtlog.EvtFormatMessage and EvtCreateRenderContext
 (#1308)

* Support more elements in the SECURITY_LOGON_SESSION_DATA struct