@@ -149,6 +149,14 @@ STDMETHODIMP CPyCOMTest::Test6(QsAttributeWide in, QsAttributeWide *out)
     return S_OK;
 }
 
+STDMETHODIMP CPyCOMTest::TestInOut(float *fval, QsBoolean *bval, long *lval)
+{
+    *fval *= 2;
+    *lval *= 2;
+    *bval = !*bval;
+    return S_OK;
+}
+
 STDMETHODIMP CPyCOMTest::GetSetInterface(IPyCOMTest *ininterface, IPyCOMTest **outinterface)
 {
     if (outinterface == NULL)
@@ -699,6 +707,18 @@ HRESULT CPyCOMTest::TestMyInterface(IUnknown *unktester)
     tattr = TestAttr1_1;
     CHECK_HR(tester->Test5(&tattr));
     CHECK_TRUE(tattr == TestAttr1);
+
+    float fval = 2.0;
+    long lval = 4;
+    i = VARIANT_TRUE;
+    CHECK_HR(tester->TestInOut(&fval, &i, &lval));
+    CHECK_TRUE(fval == 4.0);
+    CHECK_TRUE(lval == 8);
+    CHECK_TRUE(i == VARIANT_FALSE);
+    CHECK_HR(tester->TestInOut(&fval, &i, &lval));
+    CHECK_TRUE(fval == 8.0);
+    CHECK_TRUE(lval == 16);
+    CHECK_TRUE(i == VARIANT_TRUE);
 
     // STRINGS
     CComBSTR instr("Foo");
